# weight_loss

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 08efae493dee_.py  1f909823799e_.py  2cb68c352edc_.py  3af1088677eb_.py  3dbb1a34bf9b_.py  699297c28514_.py  8712bffa74f1_.py  8b92b15044e6_добавляем_тарифы.py  b2f3e6632c70_.py  c47dbdabed6a_.py  d1626166e1ea_добавляем_стартовый_тариф_всем_.py  e0a5d9e66d61_.py
app/api/v1/: admin.py  auth.py  challenge.py  notification.py  referral.py  tariff.py  transaction.py  user.py  weight.py
app/models/: __init__.py  challenge.py  notification.py  tariff.py  transaction.py  user.py  weight.py
app/schemas/: auth.py  challenge.py  notification.py  tariff.py  transaction.py  user.py  weight.py
app/services/: auth_service.py  create_user.py
app/tests/: conftest.py  test_auth.py  test_chalenge.py  test_notification.py  test_tariff.py  test_transaction.py  test_user.py  test_weight.py
nginx/conf.d/: default.conf
tests/: conftest.py  test_auth.py  test_chalenge.py  test_notification.py  test_tariff.py  test_transaction.py  test_user.py  test_weight.py
