[project]
name = "weight-loss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.5.3",
    "fastapi[standard]>=0.116.1",
    "fastapi-sqlalchemy>=0.2.1",
    "pydantic>=2.11.9",
    "pydantic-extra>=1.0.0",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy-orm>=1.2.10",
    "phonenumbers>=9.0.14",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
